--- a/index.html
+++ b/index.html
@@ -6,14 +6,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Hello, world!</title>
+    <link rel="stylesheet" type="text/css" href="./style/style.css">
+	<title>Hello, world!</title>
 </head>
 
 
 
-<body>
-    <h1>Hello, world!</h1>
+<body class="back">
 
+	<div class="container mt-4 ">
+
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+    		<span class="navbar-toggler-icon"></span>
+  		</button>
+  		<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+    		<a class="navbar-brand" href="#">Job Gomez</a>
+    		<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      			<li class="nav-item active">
+        			<a class="nav-link" href="#">Education<span class="sr-only">(current)</span></a>
+      			</li>
+      			<li class="nav-item">
+        			<a class="nav-link" href="#">Skills</a>
+      			</li>
+      			<li class="nav-item">
+        			<a class="nav-link" href="#">Experience</a>
+      			</li>
+    		</ul>
+  		</div>
+	</nav>
+
+
+	
+	<div class="row mt-4">
+		<div class="col-md-4 text-center">
+			<h5> Job Gomez </h5>
+			<div> <img class="img_resize rounded" src="./img/me.png"> </div>
+		</div>
+		<div class="col-md-8 text-center">
+			<p class="text">ald;adlfdjlfadj;laskfj;sdla 
+			asfdasdfasdfasdfadsfdasfdsfasdfasdfasdfasdfsadfsad
+			asdfasdfasdfadsfasdfsadfasdfasdfasdfasdfasdfsdafdsafsdafas
+			asdfasdfsdadsafsdafkldsajflk;jds;fkasdjlkfjdsalkfadasffdsfasdfa
+			</p>
+		</div>
+	</div>
+	
+	<div class="row mt-4">
+		<div class="col-md-4 text-center">
+			<h5 class="text">Education</h5>
+		</div>
+		<div class="col-md-8 text-center">
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+		</div>
+	</div>
+	
+	<div class="row mt-4">
+		<div class="col-md-4 text-center">
+			<h5 class="text">Skills</h5>
+		</div>
+		<div class="col-md-8 text-center">
+			<p class="text">alkdsfsadkksd;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsfsadkksd;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsfsadkksd;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsfsadkksd;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsfsadkksd;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsfsadkksd;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsfsadkksd;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+		</div>
+	</div>
+	
+	<div class="row mt-4">
+		<div class="col-md-4 text-center">
+			<h5 class="text">Experience</h5>
+		</div>
+		<div class="col-md-8 text-center">
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+		</div>
+	</div>
+	
+	</div>
 
 
 
