--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./style/style.css">
-	<title>Hello, world!</title>
+	<title>CV Page</title>
 </head>
 
 
@@ -44,10 +44,10 @@
 			<div> <img class="img_resize rounded" src="./img/me.png"> </div>
 		</div>
 		<div class="col-md-8 text-center">
-			<p class="text">ald;adlfdjlfadj;laskfj;sdla 
-			asfdasdfasdfasdfadsfdasfdsfasdfasdfasdfasdfsadfsad
-			asdfasdfasdfadsfasdfsadfasdfasdfasdfasdfasdfsdafdsafsdafas
-			asdfasdfsdadsafsdafkldsajflk;jds;fkasdjlkfjdsalkfadasffdsfasdfa
+			<p class="text">I recently graduated from California State University Bakersfield
+							with a B.S. in Computer Science. I am in the process of obtaining 
+							my Emergency 30 Day Substitue Teaching Permit and pursue a career 
+							in Education.
 			</p>
 		</div>
 	</div>
@@ -57,37 +57,24 @@
 			<h5 class="text">Education</h5>
 		</div>
 		<div class="col-md-8 text-center">
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text">California State University Bakersfield</p>
+			<p class="text">B.S. in Computer Science</p>
+			<p class="text">GPA: 3.23</p>
+			<p class="text">Attended: September 2014 - May 2019</p>
+			
 		</div>
 	</div>
 	
 	<div class="row mt-4">
 		<div class="col-md-4 text-center">
-			<h5 class="text">Skills</h5>
+			<h5 class="text">Programming Languages</h5>
 		</div>
 		<div class="col-md-8 text-center">
-			<p class="text">alkdsfsadkksd;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsfsadkksd;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsfsadkksd;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsfsadkksd;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsfsadkksd;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsfsadkksd;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsfsadkksd;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<p class="text"> C/C++</p>
+			<p class="text"> JavaScript</p>
+			<p class="text"> PHP</p>
+			<p class="text"> HTML & CSS</p>
+			<p class="text"> SQL</p>
 		</div>
 	</div>
 	
@@ -96,13 +83,18 @@
 			<h5 class="text">Experience</h5>
 		</div>
 		<div class="col-md-8 text-center">
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
-			<p class="text">alkdsf;jg;lsdfkjg;lskdfjg;lskdfjgl;ksdfjgsdlkjfhsadkjhflakjsdhflaksjdfh</p>
+			<h5 class="text">Pathways Mentor at CSUB NSME Student Center</h5>
+			<p class="text" >August 2017 - May 2019</p>
+			<p class="text">Mentored Incoming computer science students to the university 
+							and provided guidance about their major, classes and general
+							advise to assimilate to the university.
+			</p>
+			<h5 class="text">Computer Science Tutor at CSUB NSME Student Center</h5>
+			<p class="text" >August 2017 - May 2019</p>
+			<p class="text">Provided students with supplemental instruction and  guidance 
+							about topics and concepts regarding their introductory 
+							computer science class. 
+			</p>
 		</div>
 	</div>
 	
